--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - e/test
   repository_dispatch:
 
 jobs:
@@ -22,9 +23,9 @@ jobs:
       with:
         apiToken: ${{ secrets.CF_API_TOKEN }}
         preCommands: |
-          wrangler kv:namespace create KV_STATUS_PAGE
+          wrangler kv:namespace create KV_FAE_DEV_STATUS_PAGE
           apt-get update && apt-get install -y jq
-          kv_namespace_id=$(wrangler kv:namespace list | jq -c 'map(select(.title | contains("KV_STATUS_PAGE")))' | jq ".[0].id")
+          kv_namespace_id=$(wrangler kv:namespace list | jq -c 'map(select(.title | contains("KV_FAE_DEV_STATUS_PAGE")))' | jq ".[0].id")
           echo "[env.production]" >> wrangler.toml
           echo "kv_namespaces = [{binding=\"KV_STATUS_PAGE\", id=${kv_namespace_id}}]" >> wrangler.toml
           [ -z "$SECRET_SLACK_WEBHOOK_URL" ] && echo "Secret SECRET_SLACK_WEBHOOK_URL not set, creating dummy one..." && SECRET_SLACK_WEBHOOK_URL="default-gh-action-secret" || true
